# schmupwarz-v

./: .gitattributes  .gitignore  CMakeLists copy.txt  CMakeLists.txt  CMakeLists.vala.txt  component.json  emcc  license.md  log.txt  modules  postbuild  readme.md
cmake/v/: FindV.cmake  VPrecompile.cmake  VVersion.cmake
docs/: index.js  index.wasm
include/: cmake-shim.h
include/emscripten/: emscripten-shim.h
include/vex/: tglm.h  tglm.opencl.h  vex.h
src/: main.c  shmupwarz.c  shmupwarz.v  test  test.v  tetris.c
vlib/vex/: game.v  glm.v  resource_manager.v  shader.v  sprite_renderer.v  texture2d.v  vex.v
